--- a/Revamedia/src/app/Components/login/login.component.html
+++ b/Revamedia/src/app/Components/login/login.component.html
@@ -2,11 +2,10 @@
   <div class="login-nav">
     <h1>Revamedia</h1>
   </div>
+
   <div class="login">
     <h2>Login</h2>
-    <br>
-    <span id="invalid" class="invalid">Invalid username and/or password</span>
-    <br>
+    <span id="invalid" class="invalid"><br>Invalid username and/or password<br></span>
     <form #loginForm="ngForm" (ngSubmit)="TEMPLogIn(loginForm)" ngNativeValidate>
       <div class="form-row">
         <label for="username">Username</label>
