remove margin from error page

--- a/Revamedia/src/app/Components/error-page/error-page.component.scss
+++ b/Revamedia/src/app/Components/error-page/error-page.component.scss
@@ -1,5 +1,5 @@
 .error-page{
-  margin-left: 6%;
+  // margin-left: 6%;
   font-family: "Tomorrow", sans-serif;
   height: 100vh;
   background-image: linear-gradient(
