implemented all functionality to post feed and post likes. need to finish front end testing

--- a/Revamedia/src/app/Components/home/home.component.html
+++ b/Revamedia/src/app/Components/home/home.component.html
@@ -183,7 +183,7 @@
     <!-- post end -->
 
       <!-- NO POST AVAILABLE START-->
-      <div class="noPost" *ngIf="user?.postsOwned.length == 0">
+      <div class="noPost" *ngIf="posts.length == 0">
         <h1>No Post</h1>
         <p>Seems like there are no posts available to show</p>
         <p>Sorry for the inconvience.</p>
