--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -125,6 +125,7 @@ $darkgrey: rgb(61,66,74);
               }
             }
             a{
+              cursor: pointer;
               text-decoration: none;
               color: $darkgrey;
               margin-left: .5rem;
