--- a/Revamedia/src/app/Components/login/login.component.html
+++ b/Revamedia/src/app/Components/login/login.component.html
@@ -26,7 +26,7 @@
     </form>
     <div class="login-help">
       <span>Not Registered?<a routerLink="/register" routerLinkActive="active">Register Here</a></span>
-      <span>Forgot Password?<a>Click Here</a></span>
+      <span>Forgot Password?<a routerLink="/forgot">Click Here</a></span>
     </div>
   </div>
 </div>
