--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="right-card">
-        <form #followForm="ngForm" (ngSubmit)="followUser(followForm)">
+        <form #followForm="ngForm" (ngSubmit)="followUser(followForm)" *ngIf="user?.username != currentUser?.username">
           <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
           <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
           <button>Follow</button>
