--- a/Revamedia/src/app/Components/navbar/navbar.component.scss
+++ b/Revamedia/src/app/Components/navbar/navbar.component.scss
@@ -64,7 +64,7 @@ $darkgrey: rgb(61,66,74);
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-around;
       width: 100%;
       height: 100%;
       li{
