--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -22,12 +22,19 @@
       </div>
 
       <div class="right-card">
-        <form #followForm="ngForm" (ngSubmit)="followUser(followForm)" *ngIf="user?.username != currentUser?.username">
-          <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
-          <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
-          <button>Follow</button>
-          <button>Unfollow</button>
-        </form>
+        <!-- *ngIf="user?.username != currentUser?.username" -->
+        <div class="right-card-container">
+          <form #followForm="ngForm" (ngSubmit)="followUser(followForm)" >
+            <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
+            <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
+            <button>Follow</button>
+          </form>
+          <form>
+            <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
+            <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
+            <button id="unFollow">Unfollow</button>
+          </form>
+        </div>
         <h5 (click)="openModal('followers', user)">{{ user?.followers.length }} Follower</h5>
         <h5 (click)="openModal('following', user)">{{ user?.following.length }} Following</h5>
       </div>
@@ -89,7 +96,7 @@
     <div class="following" *ngFor="let following of user?.following">
         <div class="following-data">
           <img src="{{following?.followedId?.profilePicture }}" *ngIf="following?.followedId?.profilePicture !== ''" alt="Name" (click)="goToProfile(following?.followedId?.userId)">
-          <img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-27.jpg" *ngIf="following?.followedId?.profilePicture === ''" alt="Name" (click)="goToProfile(following?.followedId?.userId)">
+          <img src="https://randomuser.me/api/portraits/lego/1.jpg" *ngIf="following?.followedId?.profilePicture === ''" alt="Name" (click)="goToProfile(following?.followedId?.userId)">
           <h5 (click)="goToProfile( following?.followedId?.userId )">{{ following?.followedId?.username }}</h5>
         </div>
         <div class="follow-option">
