--- a/Revamedia/src/app/Components/home/home.component.scss
+++ b/Revamedia/src/app/Components/home/home.component.scss
@@ -86,16 +86,16 @@ $darkgrey: rgb(61,66,74);
 
   // main start
   .main{
+    z-index: 100;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-
     .post-data{
-      width: 55%;
+      width: 60%;
       margin: 2rem 0;
       .post{
-        max-width: 100%;
+        width: 100%;
         border: 1px solid $lightgrey;
         border-radius: 8px;
         margin-bottom: .5rem;
@@ -125,6 +125,7 @@ $darkgrey: rgb(61,66,74);
               }
             }
             a{
+              cursor: pointer;
               text-decoration: none;
               color: $darkgrey;
               margin-left: .5rem;
@@ -207,17 +208,24 @@ $darkgrey: rgb(61,66,74);
             border-top: 1px solid $lightgrey;
             padding:1rem;
             .container{
-              width: 25%;
               display: flex;
               flex-direction: row;
-              justify-content: space-between;
+              justify-content: space-evenly;
               .likes{
-                #heartIcon{
+                .NoLike{
                   color: pink;
                   cursor: pointer;
                   transition: all .3s ease-in-out;
                   &:hover{
                     color: red;
+                  }
+                }
+                .OneLike{
+                  color: red;
+                  cursor: pointer;
+                  transition: all .3s ease-in-out;
+                  &:hover{
+                    color: rgb(187, 0, 0);
                   }
                 }
                 span{
@@ -226,6 +234,15 @@ $darkgrey: rgb(61,66,74);
                 }
               }
               .comment{
+                margin-left: 1rem;
+                cursor: pointer;
+                span{
+                  font-size: .8rem;
+                  color: $grey;
+                  &:hover{
+                    color: $darkgrey;
+                  }
+                }
                 #commentIcon{
                   color: lightblue;
                   cursor: pointer;
@@ -296,7 +313,7 @@ $darkgrey: rgb(61,66,74);
             display: flex;
             flex-direction: column;
             span{
-              font-size: 1.7rem;
+              font-size: 1.5rem;
             }
             .search{
               width: 100%;
@@ -717,7 +734,22 @@ $darkgrey: rgb(61,66,74);
       // COMMENT DISPLAY END
     }
 
-    .noPost{
+    @media screen and (max-width: 800px) {
+      .noPost{
+        width: 80%;
+        margin: 1rem 0;
+        border-radius: 8px;
+        text-align: center;
+      }
+    }
+  }
+  // main end
+  .noPost{
+    width: 100%;
+    display:flex;
+    align-items: center;
+    justify-content:center;
+    .content{
       width: 60%;
       padding: 4rem 2rem;
       margin: 5rem 0;
@@ -744,26 +776,55 @@ $darkgrey: rgb(61,66,74);
         color: $darkgrey;
       }
     }
-    @media screen and (max-width: 800px) {
-      .noPost{
-        width: 80%;
-        margin: 1rem 0;
+  }
+  @media screen and (max-width: 800px) {
+    .noPost{
+      width: 100%;
+      display:flex;
+      align-items: center;
+      justify-content:center;
+      .content{
+        width: 90%;
+        padding: 2rem;
+        margin: 5rem 0;
         border-radius: 8px;
-        text-align: center;
+        background-color: #FBAB7E;
+        background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+        box-shadow: rgba(0, 0, 0, 0.075) 0px 3px 8px;
       }
     }
   }
-  // main end
+
 }
 // media queries for homepage
 @media screen and (max-width: 800px) {
   .home-page{
-    margin-left: 10%;
+    margin-left: 0;
+    margin-top: 10%;
+    background-color: #FFFFFF;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='250' viewBox='0 0 1080 900'%3E%3Cg fill-opacity='0.18'%3E%3Cpolygon fill='%23444' points='90 150 0 300 180 300'/%3E%3Cpolygon points='90 150 180 0 0 0'/%3E%3Cpolygon fill='%23AAA' points='270 150 360 0 180 0'/%3E%3Cpolygon fill='%23DDD' points='450 150 360 300 540 300'/%3E%3Cpolygon fill='%23999' points='450 150 540 0 360 0'/%3E%3Cpolygon points='630 150 540 300 720 300'/%3E%3Cpolygon fill='%23DDD' points='630 150 720 0 540 0'/%3E%3Cpolygon fill='%23444' points='810 150 720 300 900 300'/%3E%3Cpolygon fill='%23FFF' points='810 150 900 0 720 0'/%3E%3Cpolygon fill='%23DDD' points='990 150 900 300 1080 300'/%3E%3Cpolygon fill='%23444' points='990 150 1080 0 900 0'/%3E%3Cpolygon fill='%23DDD' points='90 450 0 600 180 600'/%3E%3Cpolygon points='90 450 180 300 0 300'/%3E%3Cpolygon fill='%23666' points='270 450 180 600 360 600'/%3E%3Cpolygon fill='%23AAA' points='270 450 360 300 180 300'/%3E%3Cpolygon fill='%23DDD' points='450 450 360 600 540 600'/%3E%3Cpolygon fill='%23999' points='450 450 540 300 360 300'/%3E%3Cpolygon fill='%23999' points='630 450 540 600 720 600'/%3E%3Cpolygon fill='%23FFF' points='630 450 720 300 540 300'/%3E%3Cpolygon points='810 450 720 600 900 600'/%3E%3Cpolygon fill='%23DDD' points='810 450 900 300 720 300'/%3E%3Cpolygon fill='%23AAA' points='990 450 900 600 1080 600'/%3E%3Cpolygon fill='%23444' points='990 450 1080 300 900 300'/%3E%3Cpolygon fill='%23222' points='90 750 0 900 180 900'/%3E%3Cpolygon points='270 750 180 900 360 900'/%3E%3Cpolygon fill='%23DDD' points='270 750 360 600 180 600'/%3E%3Cpolygon points='450 750 540 600 360 600'/%3E%3Cpolygon points='630 750 540 900 720 900'/%3E%3Cpolygon fill='%23444' points='630 750 720 600 540 600'/%3E%3Cpolygon fill='%23AAA' points='810 750 720 900 900 900'/%3E%3Cpolygon fill='%23666' points='810 750 900 600 720 600'/%3E%3Cpolygon fill='%23999' points='990 750 900 900 1080 900'/%3E%3Cpolygon fill='%23999' points='180 0 90 150 270 150'/%3E%3Cpolygon fill='%23444' points='360 0 270 150 450 150'/%3E%3Cpolygon fill='%23FFF' points='540 0 450 150 630 150'/%3E%3Cpolygon points='900 0 810 150 990 150'/%3E%3Cpolygon fill='%23222' points='0 300 -90 450 90 450'/%3E%3Cpolygon fill='%23FFF' points='0 300 90 150 -90 150'/%3E%3Cpolygon fill='%23FFF' points='180 300 90 450 270 450'/%3E%3Cpolygon fill='%23666' points='180 300 270 150 90 150'/%3E%3Cpolygon fill='%23222' points='360 300 270 450 450 450'/%3E%3Cpolygon fill='%23FFF' points='360 300 450 150 270 150'/%3E%3Cpolygon fill='%23444' points='540 300 450 450 630 450'/%3E%3Cpolygon fill='%23222' points='540 300 630 150 450 150'/%3E%3Cpolygon fill='%23AAA' points='720 300 630 450 810 450'/%3E%3Cpolygon fill='%23666' points='720 300 810 150 630 150'/%3E%3Cpolygon fill='%23FFF' points='900 300 810 450 990 450'/%3E%3Cpolygon fill='%23999' points='900 300 990 150 810 150'/%3E%3Cpolygon points='0 600 -90 750 90 750'/%3E%3Cpolygon fill='%23666' points='0 600 90 450 -90 450'/%3E%3Cpolygon fill='%23AAA' points='180 600 90 750 270 750'/%3E%3Cpolygon fill='%23444' points='180 600 270 450 90 450'/%3E%3Cpolygon fill='%23444' points='360 600 270 750 450 750'/%3E%3Cpolygon fill='%23999' points='360 600 450 450 270 450'/%3E%3Cpolygon fill='%23666' points='540 600 630 450 450 450'/%3E%3Cpolygon fill='%23222' points='720 600 630 750 810 750'/%3E%3Cpolygon fill='%23FFF' points='900 600 810 750 990 750'/%3E%3Cpolygon fill='%23222' points='900 600 990 450 810 450'/%3E%3Cpolygon fill='%23DDD' points='0 900 90 750 -90 750'/%3E%3Cpolygon fill='%23444' points='180 900 270 750 90 750'/%3E%3Cpolygon fill='%23FFF' points='360 900 450 750 270 750'/%3E%3Cpolygon fill='%23AAA' points='540 900 630 750 450 750'/%3E%3Cpolygon fill='%23FFF' points='720 900 810 750 630 750'/%3E%3Cpolygon fill='%23222' points='900 900 990 750 810 750'/%3E%3Cpolygon fill='%23222' points='1080 300 990 450 1170 450'/%3E%3Cpolygon fill='%23FFF' points='1080 300 1170 150 990 150'/%3E%3Cpolygon points='1080 600 990 750 1170 750'/%3E%3Cpolygon fill='%23666' points='1080 600 1170 450 990 450'/%3E%3Cpolygon fill='%23DDD' points='1080 900 1170 750 990 750'/%3E%3C/g%3E%3C/svg%3E");
     .main{
       .post-data{
         width: 90%;
         margin: 2rem 0;
       }
+    }
+  }
+}
+@media screen and (max-width: 800px) {
+  .noPost{
+    width: 100%;
+    display:flex;
+    align-items: center;
+    justify-content:center;
+    .content{
+      width: 90%;
+      padding: 2rem;
+      margin: 0;
+      border-radius: 8px;
+      background-color: #FBAB7E;
+      background-image: linear-gradient(62deg, #FBAB7E 0%, #F7CE68 100%);
+      box-shadow: rgba(0, 0, 0, 0.075) 0px 3px 8px;
     }
   }
 }
@@ -778,7 +839,12 @@ $darkgrey: rgb(61,66,74);
   opacity: 0;
   width: 100vw;
   height: 100vh;
-  transition: all .6s ease-in-out;
+  transition: all .4s ease-in-out;
+}
+.openScreen{
+  top: 0;
+  left: 0;
+  opacity: 1;
 }
 
 .modal{
@@ -787,7 +853,7 @@ $darkgrey: rgb(61,66,74);
   top: -100%;
   left: -100%;
   transform: scale(0);
-  transition: all .6s ease-in-out;
+  transition: all .4s ease-in-out;
   background-color: white;
   border-right: 3px solid $orange;
   border-left: 3px solid $orange;
@@ -958,7 +1024,7 @@ $darkgrey: rgb(61,66,74);
 // media queries for modals
 @media screen and (max-width: 800px) {
   .modal{
-    width: 85%;
+    width: 90%;
     .form-header{
       h3{
         font-size: 2rem;
@@ -967,13 +1033,8 @@ $darkgrey: rgb(61,66,74);
   }
 }
 
-.openScreen{
-  top: 0;
-  left: 0;
-  opacity: 1;
-}
 .openModal{
-  top: 5%;
+  top: 9%;
   left: 20%;
   transform: scale(1);
 }
@@ -981,6 +1042,6 @@ $darkgrey: rgb(61,66,74);
 @media screen and (max-width: 800px) {
   .openModal{
     top: 5%;
-    left: 10%;
+    left: 5%;
   }
 }
