--- a/Revamedia/src/app/Components/navbar/navbar.component.scss
+++ b/Revamedia/src/app/Components/navbar/navbar.component.scss
@@ -51,6 +51,48 @@ $darkgrey: rgb(61,66,74);
 
 @media screen and (max-width: 800px) {
   .navbar{
-    width: 10%;
+    z-index: 10;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: #3D424A;
+    height: 8%;
+    width: 100%;
+    padding: .5rem 1rem;
+    margin-bottom: 1rem;
+    ul{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-around;
+      width: 100%;
+      height: 100%;
+      li{
+        width: fit-content;
+        text-align: center;
+        a{
+          text-decoration: none;
+          background-color: #E6E5DE;
+          border-radius: 50%;
+          cursor: pointer;
+          padding: .4rem;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          border: 1.5px solid $orange;
+          color: #faa63f;
+          #icon{
+            font-size: 1rem;
+            transition: all .3s ease-in-out;
+          }
+          #counter{
+            font-size: 1.5rem;
+            font-weight: bold;
+          }
+          &:hover{
+            color: rgb(87, 189, 229);
+            border: 1.5px solid $blue;
+          }
+        }
+      }
+    }
   }
 }
