--- a/Revamedia/src/app/Components/profile/profile.component.html
+++ b/Revamedia/src/app/Components/profile/profile.component.html
@@ -4,8 +4,8 @@
     <h3>Revamedia</h3>
     <div class="page-subTitle">
       <div class="user">
-        <img *ngIf="user?.profilePicture !== ''" src="{{user?.profilePicture}}" alt="{{ user?.username }}"  routerLink="/profile" routerLinkActive="active">
-        <img *ngIf="user?.profilePicture === ''" src="https://randomuser.me/api/portraits/lego/1.jpg" alt="No Pic" routerLink="/profile" routerLinkActive="active">
+        <img *ngIf="user?.profilePicture != null" src="{{user?.profilePicture}}" alt="{{ user?.username }}"  routerLink="/profile" routerLinkActive="active">
+        <img *ngIf="user?.profilePicture == null" src="https://randomuser.me/api/portraits/lego/1.jpg" alt="No Pic" routerLink="/profile" routerLinkActive="active">
         <span><p>{{ user?.username }}</p>'s Profile</span>
       </div>
     </div>
@@ -13,22 +13,34 @@
   <!-- Page title End -->
 
   <!-- PROFILE START -->
-  <div class="profile">
+  <div class="profile" id="profile">
     <div class="profile-header" id="setBackgroundColor">
       <div class="left-card">
-        <img *ngIf="user?.profilePicture !== ''" src="{{user?.profilePicture}}" alt="{{ user?.username }}">
-        <img *ngIf="user?.profilePicture === ''" src="https://randomuser.me/api/portraits/lego/1.jpg" alt="No Pic">
+        <img *ngIf="user?.profilePicture != null" src="{{user?.profilePicture}}" alt="{{ user?.username }}">
+        <img *ngIf="user?.profilePicture == null" src="https://randomuser.me/api/portraits/lego/1.jpg" alt="No Pic">
         <h5>{{ user?.username }}</h5>
       </div>
 
       <div class="right-card">
-        <button routerLink="/messages" routerLinkActive="active">Message</button>
+        <!-- *ngIf="user?.username != currentUser?.username" -->
+        <div class="right-card-container">
+          <form #followForm="ngForm" (ngSubmit)="followUser(followForm)" >
+            <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
+            <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
+            <button>Follow</button>
+          </form>
+          <form>
+            <input type="hidden" ngModel="{{ currentUser?.userId }}" name="followedId">
+            <input type="hidden" ngModel="{{ user?.userId }}" name="followerId">
+            <button id="unFollow">Unfollow</button>
+          </form>
+        </div>
         <h5 (click)="openModal('followers', user)">{{ user?.followers.length }} Follower</h5>
         <h5 (click)="openModal('following', user)">{{ user?.following.length }} Following</h5>
       </div>
     </div>
 
-    <h4 class="profile-posts-title" id="setBackgroundColor">{{ user?.username }}'s Posts</h4>
+    <h4 class="profile-posts-title" id="setBackgroundColor" *ngIf="user?.postsOwned.length != 0">{{ user?.username }}'s Posts</h4>
     <div class="users-post">
       <div class="post" *ngFor="let post of user?.postsOwned">
         <img src="{{ post?.image }}" alt="POST">
@@ -36,9 +48,9 @@
     </div>
 
     <!-- NO POST AVAILABLE START-->
-    <div class="noPost" *ngIf="user?.postsOwned.length === 0">
+    <div class="noPost" *ngIf="user?.postsOwned.length == 0">
       <h1>No Post</h1>
-      <p>Seems like there are no posts available to show.</p>
+      <p>Seems like {{ user?.username }} doesn't have any posts.</p>
     </div>
     <!-- NO POST AVAILABLE END-->
   </div>
@@ -56,18 +68,19 @@
     <span (click)="closeModal('followers')">x</span>
   </div>
   <div class="modal-body">
-    <div class="follower" *ngIf="user?.followers.length > 0">
-      <div class="follower-data">
-        <img src="https://avatars.githubusercontent.com/u/77355023?v=4" alt="Name" routerLink="/profile" routerLinkActive="active">
-        <h5 routerLink="/profile" routerLinkActive="active">leobarrientos02</h5>
+    <div class="follower" *ngFor="let follower of user?.followers">
+        <div class="follower-data">
+          <img src="{{follower?.followerId?.profilePicture }}" *ngIf="follower?.followerId?.profilePicture != null" alt="Name" (click)="goToProfile(follower?.followerId?.userId)">
+          <img src="https://icon-library.com/images/no-user-image-icon/no-user-image-icon-27.jpg" *ngIf="follower?.followerId?.profilePicture == null" alt="Name" (click)="goToProfile(follower?.followerId?.userId)">
+          <h5 (click)="goToProfile(follower?.followedId?.userId)">{{ follower?.followerId?.username }}</h5>
+        </div>
+        <div class="follow-option">
+          <button id="unfollow">Unfollow</button>
+          <button >Follow Back</button>
+        </div>
       </div>
-      <div class="follow-option">
-        <button id="unfollow">Unfollow</button>
-        <button>Follow Back</button>
-      </div>
-    </div>
     <div class="noFollowers" *ngIf="user?.followers.length == 0">
-      <h4>Nobody is following you.</h4>
+      <h4>0 Followers</h4>
     </div>
   </div>
 </div>
@@ -80,17 +93,18 @@
     <span (click)="closeModal('following')">x</span>
   </div>
   <div class="modal-body">
-    <div class="following"  *ngIf="user?.following.length > 0">
-      <div class="following-data">
-        <img src="https://avatars.githubusercontent.com/u/77355023?v=4" alt="Name" routerLink="/profile" routerLinkActive="active">
-        <h5 routerLink="/profile" routerLinkActive="active">leobarrientos02</h5>
-      </div>
-      <div class="follow-option">
-        <button id="unfollow">Unfollow</button>
-      </div>
+    <div class="following" *ngFor="let following of user?.following">
+        <div class="following-data">
+          <img src="{{following?.followedId?.profilePicture }}" *ngIf="following?.followedId?.profilePicture !== ''" alt="Name" (click)="goToProfile(following?.followedId?.userId)">
+          <img src="https://randomuser.me/api/portraits/lego/1.jpg" *ngIf="following?.followedId?.profilePicture === ''" alt="Name" (click)="goToProfile(following?.followedId?.userId)">
+          <h5 (click)="goToProfile( following?.followedId?.userId )">{{ following?.followedId?.username }}</h5>
+        </div>
+        <div class="follow-option">
+          <button id="unfollow">Unfollow</button>
+        </div>
     </div>
     <div class="noFollowing" *ngIf="user?.following.length == 0">
-      <h4>You don't follow anyone.</h4>
+      <h4>0 Following</h4>
     </div>
   </div>
 </div>
