dark mode updates

--- a/Revamedia/src/styles.scss
+++ b/Revamedia/src/styles.scss
@@ -125,7 +125,7 @@ $darkgrey: rgb(61,66,74);
       }
     }
   }
-  #delete-post-modal,#edit-post-modal,#add-post-modal,#following-modal,#followers-modal{
+  #delete-post-modal,#edit-post-modal,#add-post-modal,#following-modal,#followers-modal,#edit-account-modal{
     background-color: rgb(31, 31, 31);
     transition: all 0.4s ease-in-out;
     color: white;
